--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@ body {
     color: #434455;
     background-color: #FFFFFF;
 }
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
 .container {
     width: 1158px;
     margin: 0 auto;
@@ -192,6 +195,7 @@ color: #434455;
         text-align: center;
         color: #fff;
         margin: 0 auto;
+        max-width: 496px;
 }
 
 .hero-banner-button {
@@ -203,6 +207,7 @@ color: #434455;
         height: 56px;
         border: none;
         border-radius: 4px;
+        min-width: 169px;
 }
 
 .hero-banner-button:hover {
@@ -242,10 +247,11 @@ color: #434455;
 
 .advanteges-list-items {
     max-width: 264px;
-    flex-basis: calc((100% - 3 * 24) / 4);
+    flex-basis: calc((100% - 3 * 24px) / 4)
 }
 
 .advanteges-list-items-title {
+    margin-bottom: 8px;
 }
 
 .advanteges-list-items-text {
