--- a/css/styles.css
+++ b/css/styles.css
@@ -246,8 +246,7 @@ color: #434455;
 }
 
 .advanteges-list-items {
-    max-width: 264px;
-    flex-basis: calc((100% - 3 * 24px) / 4)
+    width: calc((100% - 72px) / 4);
 }
 
 .advanteges-list-items-title {
@@ -269,27 +268,41 @@ color: #434455;
 .team-title {
     text-transform: capitalize;
     color: #2e2f42;
-    padding-bottom: 72px;
+    margin-bottom: 72px
 }
 
-.team-list {
+/* .team-list {
     background-color: #f4f4fd;
     display: flex;
     gap: 24px;
     align-items: start;
     justify-content: center;
 
+} */
+
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
 .team-list-items {
+     max-width: 264px;
+    flex-basis: calc((100% - 3 * 24) / 4);
+    text-align: center;
     background-color: #FFFFFF;
-    border-radius: 0 0 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    border-radius: 0 0 4px 4px;
 
 }
 
 .team-list-items-photo {
     display: block;
     width: 100%;
+}
+
+.team-list-container {
+    padding: 32px 0;
 }
 
 .team-list-items-title {
@@ -301,7 +314,6 @@ color: #434455;
 
 .team-list-items-text {
          text-align: center;
-         padding-bottom: 32px;
 }
 
 /* team end*/
