--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,7 @@ color: #434455;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    gap: 24px;
 }
 .team-list-items {
      max-width: 264px;
@@ -346,7 +347,7 @@ row-gap: 48px;
 }
 
 .portfolio-container {
-    padding: 32px 16p;
+    padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
 }
