--- a/css/styles.css
+++ b/css/styles.css
@@ -288,8 +288,8 @@ color: #434455;
     gap: 24px;
 }
 .team-list-items {
-     max-width: 264px;
-    flex-basis: calc((100% - 3 * 24) / 4);
+    max-width: 264px;
+    flex-basis: calc((100% - 3 * 24px) / 4);
     text-align: center;
     background-color: #FFFFFF;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -300,7 +300,6 @@ color: #434455;
 .team-list-items-photo {
     display: block;
     width: 100%;
-    flex-basis: calc((100% - 3 * 24px) / 4)
 }
 
 .team-list-container {
